# AI_experiment

./: README.md  main.py  pyproject.toml
cv/: dataset.py  network.py  run_python_code.ipynb  test_mnist_mlp.py  train_mnist_cnn.py  train_mnist_mlp.py
nlp rl/nlp/: language_model_lstm.py  language_model_lstm_test.py  language_model_lstm_train.py  run_python_code.ipynb  sentence_data.py  translator_model_test.py
nlp rl/nlp/trained_model/: langage_model_lstm_1.model  langage_model_lstm_10.model  langage_model_lstm_2.model  langage_model_lstm_3.model  langage_model_lstm_4.model  langage_model_lstm_5.model  langage_model_lstm_6.model  langage_model_lstm_7.model  langage_model_lstm_8.model  langage_model_lstm_9.model  langage_model_rnn_1.model  langage_model_rnn_10.model  langage_model_rnn_2.model  langage_model_rnn_3.model  langage_model_rnn_4.model  langage_model_rnn_5.model  langage_model_rnn_6.model  langage_model_rnn_7.model  langage_model_rnn_8.model  langage_model_rnn_9.model  translator_1.model  translator_10.model  translator_2.model  translator_3.model  translator_4.model  translator_5.model  translator_6.model  translator_7.model  translator_8.model  translator_9.model
nlp rl/rl/: answer_sheet.md  main.py  run_python_code.ipynb
nlp rl/rl/agents/: random_agent.py  rulebase_agent.py  table_q_agent.py
nlp rl/rl/gym_easymaze/envs/: easymaze_env.py
speech/: vc_exercise.ipynb
